--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
-            <h2>Software Engineer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <h1>Vega Luciano</h1>
+            <h2>Estudiante</h2>
+            <a href="#" class="btn-rounded-white">Resumen</a>
         </div>
         <!-- End #lead-content -->
 
